infra-k8s/5-helm-charts/prometheus-operator/alert-manager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: prometheus-operator-prometheus
  name: prometheus
  namespace: openstack
spec:
  rules:
  - host: prom.hanu-ci.io
    http:
      paths:
      - backend:
          serviceName: prometheus-external
          servicePort: 9090
        path: /
  tls:
  - hosts:
    - prom.hanu-ci.io
    secretName: hanu-certs
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: openstack
spec:
  type: ExternalName
  externalName: prometheus-prometheus-oper-prometheus.lma.svc.cluster.local
